--- a/html/html5/css/reset.css
+++ b/html/html5/css/reset.css
@@ -80,6 +80,9 @@ h6 {
 
 img { width:  100%}
 
+.clear{*zoom:1;}
+.clearfix:before, .clearfix:after {display: block; content: ''; line-height: 0;}
+.clearfix:after {clear: both;}
 
 /* IR 효과 */
 .ir_pm {
